[package]
name = "nut"
version = "0.1.0"
edition = "2021"
description = "Network UPS Tools — orca service-backend"

[package.metadata.orca]
category = "monitoring"

[lib]
name = "nut"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "nut"
path = "src/main.rs"

# nut is a BACKEND-ONLY orca plugin: zero #[orca_tool]s. It registers a
# ServiceBackend across the cdylib FFI seam and reaches the whole orca system
# through plugin-toolkit alone.
[dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
# NUT's upsd is a line-based ASCII TCP protocol on 3493; the client speaks it
# directly over tokio TCP. The toolkit hard-links tokio but not its `net`
# feature, so nut enables `net` here (plus the io/time it uses for the client).
tokio = { version = "1", features = ["net", "io-util", "time", "rt"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[lints.clippy]
let_underscore_must_use = "deny"
